fix: improve some styling/readability

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 
 html {
 	font-family: 'Open Sans';
-	@apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-200;
+	@apply bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-200;
 }
 
 .amber-400 {
